--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,7 @@
 cellaserv2-protobuf
 ===================
 
-[cellaserv2](https://bitbucket.org/evolutek/cellaserv2) source and generated
+[cellaserv2](https://github.com/evolutek/cellaserv2) source and generated
 protobuf files.
 
 Use this repository as a submodule
@@ -14,9 +14,9 @@ How to get protoc-gen-go?
 
 Run:
 
-    $ go get code.google.com/p/goprotobuf/{proto,protoc-gen-go}
+    $ go get github.com/golang/protobuf/{proto,protoc-gen-go}
 
 Then add $GOPATH/bin to your $PATH
 
 For more informations, see:
-[goprotobuf's README](http://code.google.com/p/goprotobuf/source/browse/README)
+[goprotobuf's README](https://github.com/golang/protobuf)
