--- a/README.mkd
+++ b/README.mkd
@@ -1,13 +1,15 @@
 cellaserv3-protobuf
 ===================
 
-[cellaserv3](https://bitbucket.org/evolutek/cellaserv3) source and generated
+[cellaserv3](https://github.com/evolutek/cellaserv3) source and generated
 protobuf files.
 
-Use this repository as a submodule
-----------------------------------
+Use this repository as a submodule in other repos.
 
-    $ cd your_repo
+Dependencies:
+
+* protobuf-compiler
+* protoc-gen-go
 
 How to get protoc-gen-go?
 -------------------------
@@ -16,7 +18,14 @@ Run:
 
     $ go get github.com/golang/protobuf/{proto,protoc-gen-go}
 
-Then add $GOPATH/bin to your $PATH
+Then add `$GOPATH/bin` to your `$PATH`
 
 For more informations, see:
 [goprotobuf's README](https://github.com/golang/protobuf)
+
+Updating protobuf generated files
+---------------------------------
+
+Run:
+
+    $ make
